[package]
name = "icp"
version = "0.1.0"
edition = "2018"

authors = ["Ilya Bobyr <ilya.bobyr@gmail.com"]
license = "BSD-3-Clause"

description = "Parser framework for interactive input"

[dependencies]
indoc = "1.0.3"
itertools = "0.9"
lazy_static = "1.4.0"
regex = "1.3.1"
num-traits = "0.2.8"

[dev-dependencies]
tempfile = "3.1.0"
